@@ -21,17 +21,50 @@ public class BrowserWindow extends JPanel {
     }
 
     protected void createUI() {
+	tabPane = new JTabbedPane();
 	queryPane = new QueryPane();
+	treePane = new PhotoFolderTree();
+	tabPane.addTab( "Query", queryPane );
+	tabPane.addTab( "Folders", treePane );
 	viewPane = new TableCollectionView();
 
 	viewPane.setCollection( queryPane.getResultCollection() );
+
+	// Set listeners to both query and folder tree panes
+
+	/*
+	  If an actionEvent comes from queryPane & the viewed folder is
+	  no the query resouts, swich to it (the result folder will be nodified of
+	  changes to quert parameters directly
+	*/
+	queryPane.addActionListener( new ActionListener() {
+		public void actionPerformed( ActionEvent e ) {
+		    if ( viewPane.getCollection() != queryPane.getResultCollection() ) {
+			viewPane.setCollection( queryPane.getResultCollection() );
+		    }
+		}
+	    } );
+
+	/*
+	  If the selected folder is changed in treePane, switch to that immediately
+	*/
+	treePane.addPhotoFolderTreeListener( new PhotoFolderTreeListener() {
+		public void photoFolderTreeSelectionChanged( PhotoFolderTreeEvent e ) {
+		    viewPane.setCollection( e.getSelected() );
+		}
+	    } );
+	
 	// Create the split pane to display both of these components
-	JSplitPane split = new JSplitPane( JSplitPane.HORIZONTAL_SPLIT, queryPane, viewPane );
+	JSplitPane split = new JSplitPane( JSplitPane.HORIZONTAL_SPLIT, tabPane, viewPane );
 	setLayout( new BorderLayout() );
 	add( split, BorderLayout.CENTER );
     }
 
+    protected JTabbedPane tabPane = null;
     protected QueryPane queryPane = null;
+    protected PhotoFolderTree treePane = null;
+    
+    
     protected TableCollectionView viewPane = null;
 
     /**
